# RoboTerrain

./: #Dockerfile#  #Readme.txt#  #jack_readme.txt#  .#Dockerfile  .#README.md  .#Readme.txt  .#jack_readme.txt  .gitignore  3_drift2.webm  Dockerfile  Dockerfile~  LICENSE  README.md  Readme.txt  dissertation_notes.md  history_July_10th.txt  jack_readme.txt  moving_targets.webm  requirements.txt
actor_publisher/: CMakeLists.txt  CMakeLists.txt~  actor_pos_publisher.cc
actor_publisher/src/: actor_pos_publisher.cc  actor_pos_publisher.cc~  actor_pos_publisher.old  actor_pos_publisher.old~
image_obs/launch/: crop_decimate.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
metrics_analyzer/: cli.py  cli.py~  cli_main.py  cli_main.py~  cli_main_bak.py  cli_old.py  clibad.py  data_loader.py  metrics-data-loader.py  metrics_statistics.py
metrics_analyzer/data/: 1.csv  1.csv~  2.csv
metrics_analyzer/metric_logs/: metrics_log_20241117_120944.csv
metrics_analyzer/visualizations/: #time_series.py#  .#time_series.py  correlations.py  time_series.py  time_series.py~  time_seriesOld.py  time_seriesOld2.py  time_series_back_jv.py
metrics_analyzer/vizualizations/: metrics-aggregate.py  metrics-time-series.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/: heading.py  heading_log.txt  ign_ros2_pose_topic.py  jack_notes.md  lidar.txt  pose-converter-v3.py  temp_history_07_25.txt
ros2_ws/temp/: gazebo_mover.sdf  metrics_log.csv  walking_humman.py~
(+626 files in other folders)
